<resources>
    <string name="app_name">MSC BIS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="developer_email">rafael.nuenlist@students.fhnw.ch</string>
    <string name="fragment_share_text">Share it!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_faq_title">FAQ</string>
    <string name="nav_notification_title">Notifications</string>
    <string name="nav_links_title" >Links</string>
    <string name="nav_homepage_title">Go to homepage</string>

    <string name="fragment_links_text"><![CDATA[<a href=\"https://eventowebtool.fhnw.ch\">Eventowebtool</a><br><br>
            <a href=\"http://www.fhnw.ch/business/msc-bis/course-2/full-time/timetable\" >Timetable full time</a><br><br>
            <a href=\"http://www.fhnw.ch/business/msc-bis/course-2/part-time/timetable\" >Timetable part time</a><br><br>
            <a href=\"http://www.fhnw.ch/business/msc-bis/admission-and-information/application-for-admission-to-a-master-programme-msc-bis\" >Online application for admission</a><br><br>
            <a href=\"http://next-career.ch/en\">Jobs/Internships</a><br><br>
            <a href=\"https://www.swissuniversities.ch/en/services/e-resources-cas/resources-by-document-type/databases/\">Library book search</a><br><br>
            <a href=\"http://www.fhnw.ch/bachelor-und-master/rechtserlasse/HSW_Study%20and%20Examination%20Regulations%20MSc%20BIS_IM.PDF\">Study regulations</a><br><br>
            <a href=\"mailto:raumverwaltung.olten@fhnw.ch?subject=Raumreservation\" >Reservation of a room</a><br><br>
            <a href=\"http://www.fhnw.ch/campus-olten/ueber-den-campus/verpflegung/menu_v_e.pdf\">Restaurant Von Roll</a><br><br>
            <a href=\"http://web.fhnw.ch/plattformen/iobusiness/international-office\">International Office</a><br><br>
            <a href=\"https://www.facebook.com/FHNWbusiness\">Facebook Page</a><br><br>
            <a href=\"https://twitter.com/FHNWbusiness\">Twitter</a>]]></string>
    <string name="btn_login">Login</string>
    <string name="txt_password_hint">123</string>
    <string name="tv_password">Password:</string>
    <string name="tv_email">FHNW Email:</string>
    <string name="txt_email_hint">first.last@fhnw.ch</string>
    <string name="tv_login_title">Login</string>
</resources>
