<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faq"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_faq_title" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_notification_title" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_links"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/nav_links_title" />
        <item
            android:id="@+id/nav_homepage"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/nav_homepage_title" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
